--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
     </head>     
     <body>
         <div class="container">
-            <h2>EVAN SIMMONS.</h2>
+            <h2>EVAN SIMMONS</h2>
             <p><a href="mailto:evan.simmons248@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/evan-g-simmons">LinkedIn</a></p>
             <h3>Summary</h3>
             <p>IT Professional with experience in both Mac Systems Administration and Desktop/Network Support, looking to transition to a Cloud Administration role. Proven track record of implementing cloud-based management solutions and monitoring endpoint performance. Strong commitment to providing exceptional customer service and collaborating with cross-functional teams resulting in multiple successful projects and satisfied end-users.</p>
