--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
             <h2>EVAN SIMMONS</h2>
             <p><a href="mailto:evan.simmons248@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/evan-g-simmons">LinkedIn</a></p>
             <h3>Summary</h3>
-            <p>IT Professional with experience in both Mac Systems Administration and Desktop/Network Support, looking to transition to a Cloud Administration role. Proven track record of implementing cloud-based management solutions and monitoring endpoint performance. Strong commitment to providing exceptional customer service and collaborating with cross-functional teams resulting in multiple successful projects and satisfied end-users.</p>
+            <p>I.T. Professional with experience in both Mac Systems Administration and Desktop/Network Support, looking to transition to a Cloud Administration role. Proven track record of implementing cloud-based management solutions and monitoring endpoint performance. Strong commitment to providing exceptional customer service and collaborating with cross-functional teams resulting in multiple successful projects and satisfied end-users.</p>
             <h3>Technical Skillset</h3>
             <p>Mac Systems Administration | Jamf Pro Configuration | Patch Management | Identity and Access Management | File Share Management | Endpoint Performance Monitoring | Encryption Key Management | Shell Scripting | Linux/UNIX CLI | Networking</p>
             <h3>Experience</h3>
