--- a/website/index.html
+++ b/website/index.html
@@ -14,28 +14,37 @@
             <h2>EVAN SIMMONS</h2>
             <p><a href="mailto:evan.simmons248@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/evan-g-simmons">LinkedIn</a></p>
             <h3>Summary</h3>
-            <p>IT Professional with experience in both Mac Systems Administration and Desktop/Network Support, looking to transition to a Cloud Administration role. Proven track record of implementing cloud-based management solutions and monitoring endpoint performance. Strong commitment to providing exceptional customer service and collaborating with cross-functional teams resulting in multiple successful projects and satisfied end-users.</p>
+            <p>IT Professional with experience in both Mac Systems Administration and Desktop/Network Support, looking to transition to a Cloud Administrator role. Proven track record of implementing cloud-based management solutions and monitoring endpoint performance. Strong commitment to providing exceptional customer service and collaborating with cross-functional teams resulting in multiple successful projects and satisfied end-users.</p>
             <h3>Technical Skillset</h3>
-            <p>Mac Systems Administration | Jamf Pro Configuration | Patch Management | Identity and Access Management | File Share Management | Endpoint Performance Monitoring | Encryption Key Management | Shell Scripting | Linux/UNIX CLI | Networking</p>
+            <p>Identity and Access Management | File Share Management | Cloud Computing | AWS Certification | Mac Systems Administration | Active Directory Domain Services (AD DS) Jamf Pro Cloud Configuration | Patch Management | Endpoint Performance Monitoring | Encryption Key Management | Shell Scripting | Linux/UNIX CLI | Networking</p>
             <h3>Experience</h3>
             <p><b>Client Technologies Analyst II, Trinity Health; Livonia, MI &mdash; 2015-Present</b></p>
-            <p>Provides in-person and remote technical support for Trinity Health’s corporate office staff, including executive-level colleagues. Acting as a Mac Systems Administrator maintains the Jamf Pro management system for Macs across the enterprise. Other responsibilities include managing user accounts, performing endpoint performance monitoring, and file share administration.</p>
+            <p>Provides in-person and remote technical support for Trinity Health’s corporate office staff, including executive-level colleagues. Regularly collaborates with members of own team, and other TIS teams to resolve more complicated issues. Acting as a Mac Systems Administrator participates in maintaining the Jamf Pro management system for Macs across the enterprise. Other responsibilities include managing user accounts, computers, and file shares via AD DS, endpoint performance monitoring, website testing, and executive support.</p>
             <p><b>Jamf Pro: Build and Implementation Project</b></p>
             <ul>
-                <li>Creating policies and configuration profiles to manage devices to company security standards.</li>
+                <li>Collaborated with Multi-Platform Engineers to incorporate Microsoft Intune conditional access on Trinity- managed Macs, enabling access to M365 applications, including OneDrive, through integration with Azure Active Directory (Azure AD) directory services.</li>
+                <li>Creating Smart Groups and Static Groups in Jamf Pro to define user and device access to applications and services. This allows for role management with managed Mac computers.</li>
+                <li>Mapping share drives and configuring Microsoft OneDrive on managed Macs, allowing access to our shared directories and cloud storage provided by Microsoft.</li>
                 <li>Packaging and deploying software to managed Macs, implementing shell scripts, and patch management for macOS and application updates.</li>
                 <li>Enforcing disk encryption key management via Jamf Pro.</li>
-                <li>Provides continuous support to end-users post-implementation as Mac Systems Administrator.</li>
+                <li>Providing continuous support to end-users post-implementation as Mac Systems Administrator.</li>
             </ul>
             <p><b>Non-Standard Browser Remediation Project</b></p>
             <ul>
-                <li>Tested websites in Internet Explorer compatibility mode, enterprise mode, and trusted sites mode to resolve issues with various work-related websites.</li>
+                <li>Tested websites in Internet Explorer compatibility, enterprise, and trusted site modes to resolve issues with various work-related websites.</li>
                 <li>Removed Google Chrome and Firefox in our environment where possible to limit exposure to exploits posed by non-standard browsers.</li>
             </ul>
             <p><b>IS Help Desk Support I, Trinity Health; Livonia, MI &mdash; 2013-2015</b></p>
             <p>Provided remote desktop support to individuals who work in a healthcare environment. Possessed an average First Call Resolution rate of over 80% and typically resolved issue calls within the first 7 minutes. Supported software issues relating to various systems, including cloud-hosted clinical applications and the Microsoft Office suite.</p>
+            <h3>Personal Projects</h3>
+            <p><b>Cloud Resume Challenge (AWS)</b></p>
+            <ul>
+                <li>Participating in the Cloud Resume Challenge, a hands-on project to enhance cloud skills and build an online resume utilizing AWS technologies. Demonstrating an understanding of AWS concepts and best practices.</li>
+                <li>Developing a cloud-based web application employing AWS services including Amazon S3, AWS Lambda, Amazon API Gateway, and Amazon DynamoDB.</li>
+                <li>Expanding problem-solving capabilities and technical skill set through hands-on implementation and troubleshooting within the Cloud Resume Challenge.</li>
+            </ul>
             <h3>Certifications and Education</h3>
-            <p>Amazon Web Services - Certified Cloud Practitioner, Solutions Architect Associate (In progress)</p>
+            <p>Amazon Web Services – Certified Cloud Practitioner, Solutions Architect Associate Certificate (In Progress)</p>
             <p>Jamf - Jamf Certified Tech</p>
             <p>Oakland Community College - Computer Support Certification</p>
             &nbsp;
