--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <title>My Cloud Resume</title>         
+        <title>Evan Simmons Resume</title>         
         <link rel="stylesheet" href="resumestyle.css"> 
     </head>     
     <body>
