updated index and css

--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="" />
 
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> 
-	<link rel="stylesheet" type="text/css" href="resumestyle.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
 
 </head>
 <body>
@@ -50,28 +50,29 @@
 					</div><!--// .yui-gf -->
 
 					<div class="yui-gf">
-						<div class="yui-u first">
-							<h2>Skills</h2>
-						</div>
-						<div class="yui-u">
-							<ul class="talent">
-								<li>Amazon Web Serices</li>
-								<li>Microsoft Azure</li>
-								<li class="last">Python</li>
-							</ul>
-
-							<ul class="talent">
-								<li>IAM</li>
-								<li>File Share Management</li>
-								<li class="last">Patch Management</li>
-							</ul>
-
-							<ul class="talent">
-								<li>Linux / Unix</li>
-								<li>Endpoint Performance Monitoring</li>
-								<li class="last">Networking</li>
-							</ul>
-						</div>
+						<div class="skills-container">
+							<div class="skills-column">
+							  <ul class="skills-list">
+								<li class="skill-item">Amazon Web Services</li>
+								<li class="skill-item">Microsoft Azure</li>
+								<li class="skill-item">Python</li>
+							  </ul>
+							</div>
+							<div class="skills-column">
+							  <ul class="skills-list">
+								<li class="skill-item">IAM</li>
+								<li class="skill-item">File Share Management</li>
+								<li class="skill-item">Patch Management</li>
+							  </ul>
+							</div>
+							<div class="skills-column">
+							  <ul class="skills-list">
+								<li class="skill-item">Linux / Unix</li>
+								<li class="skill-item">Endpoint Performance Monitoring</li>
+								<li class="skill-item">Networking</li>
+							  </ul>
+							</div>
+						  </div>
 					</div><!--// .yui-gf-->
 
 										<div class="yui-gf">
