adjusted page width in CSS and changed html

--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@
 				<div class="yui-u">
 					<div class="contact-info">
 						<!-- <h3><a id="pdf" href="#">Download PDF</a></h3> -->
-						<h3><a href="mailto:evan.simmons248@gmail.com">evan.simmons248@gmail.com</a></h3>
+						<h3><a href="mailto:evan.simmons248@gmail.com">Email</a></h3>
 						<h3><a href="https://www.linkedin.com/in/evan-g-simmons">LinkedIn Profile</a></h3>
 					</div><!--// .contact-info -->
 				</div>
@@ -60,7 +60,7 @@
 							</div>
 							<div class="skills-column">
 							  <ul class="skills-list">
-								<li class="skill-item">IAM</li>
+								<li class="skill-item">Identity and Access Management</li>
 								<li class="skill-item">File Share Management</li>
 								<li class="skill-item">Patch Management</li>
 							  </ul>
@@ -168,7 +168,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Evan Simmons &mdash; <a href="mailto:evan.simmons248@gmail.com">evan.simmons248@gmail.com</a> &mdash; <a href="https://www.linkedin.com/in/evan-g-simmons">LinkedIn Profile</a></p>
+			<p>Evan Simmons &mdash; <a href="mailto:evan.simmons248@gmail.com">Email</a> &mdash; <a href="https://www.linkedin.com/in/evan-g-simmons">LinkedIn Profile</a></p>
 			&nbsp;
 			<p>Page Visits:
 				<span id="visitor_counter"/></p>
