--- a/website/index.html
+++ b/website/index.html
@@ -44,7 +44,7 @@
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-								Experienced IT Professional skilled in Mac Systems Administration and Desktop/Network Support, seeking a transition to a Cloud Engineering role. Demonstrated expertise in deploying cloud management solutions and monitoring endpoints, with a strong focus on delivering excellent customer service and driving successful projects through team collaboration.
+								Experienced IT Professional skilled in Mac Systems Administration and Desktop/Network Support, seeking a transition to a Cloud Administration role. Demonstrated expertise in deploying cloud management solutions and monitoring endpoints, with a strong focus on delivering excellent customer service and driving successful projects through team collaboration.
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
